--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <title>Build a beautiful portfolio website</title>
   </head>
   <body>
-    <header></header>
+    <!-- This is header section -->
+    <header>
+      <nav>
+        <h3 class="nav-title">Ma<span>r</span>y</h3>
+        <ul>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><button class="btn-hire">Hire Me</button></li>
+        </ul>
+      </nav>
+      <section class="banner-section">
+        <div class="banner-text">
+          <h3>Hi, I am</h3>
+          <h1>Mary Hardy</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button>Download Cv</button>
+          <button>contact</button>
+        </div>
+        <div class="banner-img">
+          <img src="./images/hardy.png " alt="" />
+        </div>
+      </section>
+    </header>
     <main></main>
     <footer></footer>
   </body>
