added banner without stylet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- This is header section -->
-    <header>
+    <header class="header-section">
       <nav>
         <h3 class="nav-title">Ma<span>r</span>y</h3>
         <ul>
@@ -25,11 +25,11 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button>Download Cv</button>
-          <button>contact</button>
+          <button class="btn-download">Download CV</button>
+          <button class="btn-contact">contact</button>
         </div>
         <div class="banner-img">
-          <img src="./images/hardy.png " alt="" />
+          <img src="./images/hardy.png " alt="" class="hardy-pic" />
         </div>
       </section>
     </header>
