--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/0cd0a45665.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Build a beautiful portfolio website</title>
   </head>
   <body>
@@ -19,21 +23,55 @@
       </nav>
       <section class="banner-section">
         <div class="banner-text">
-          <h3>Hi, I am</h3>
-          <h1>Mary Hardy</h1>
-          <p>
+          <h3 class="banner-greeting">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="banner-description">
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-download">Download CV</button>
-          <button class="btn-contact">contact</button>
+          <button class="btn-download">
+            <i class="fa-solid fa-download" class="btn-download"></i> Download
+            CV
+          </button>
+          <button class="btn-contact">
+            <i class="fa-solid fa-phone"></i> contact
+          </button>
         </div>
         <div class="banner-img">
           <img src="./images/hardy.png " alt="" class="hardy-pic" />
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="about-section">
+        <h3 class="about-title">About Me</h3>
+        <p class="about-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-info">
+          <div>
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div>
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div>
+            <h4 class="info-title">Date of birth:</h4>
+            <p class="info-description">11 November 1987</p>
+          </div>
+          <div>
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
