--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Build a beautiful portfolio website</title>
   </head>
   <body>
-    <!-- This is header section -->
+    <!-- todo: This is header section -->
     <header class="header-section">
       <nav>
         <h3 class="nav-title">Ma<span>r</span>y</h3>
@@ -43,6 +43,7 @@
       </section>
     </header>
     <main>
+      <!-- todo: THis is about section -->
       <section class="about-section">
         <h3 class="about-title">About Me</h3>
         <p class="about-description">
@@ -71,7 +72,68 @@
           </div>
         </div>
       </section>
+      <!-- todo: THis is what is do description section -->
+      <section class="skill">
+        <h3 class="skill-title">What I do</h3>
+        <p class="skill-experiance-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skill-decription">
+          <div class="skill-item">
+            <img src="./images/icons/js.png" alt="" class="skill-logo" />
+            <h3 class="skill-item-title">Vanilla JavaScript</h3>
+            <p class="skill-item-decription">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="./images/icons/react.png" alt="" class="skill-logo" />
+            <h3 class="skill-item-title">React</h3>
+            <p class="skill-item-decription">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="./images/icons/nodejs.png" alt="" class="skill-logo" />
+            <h3 class="skill-item-title">Node.js</h3>
+            <p class="skill-item-decription">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="./images/icons/mongo.png" alt="" class="skill-logo" />
+            <h3 class="skill-item-title">MongoDB</h3>
+            <p class="skill-item-decription">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- todo: THis is resume section -->
+      <section class="resume-section">
+        <h3 class="resume-title">A summary of my resume</h3>
+        <div class="resume-description-container">
+          <div class="resume-education">
+            <h3>My Education</h3>
+          </div>
+          <div class="resume-experience">
+            <h3>My Experience</h3>
+          </div>
+        </div>
+      </section>
     </main>
+
     <footer></footer>
   </body>
 </html>
