--- a/index.html
+++ b/index.html
@@ -126,14 +126,83 @@
         <div class="resume-description-container">
           <div class="resume-education">
             <h3>My Education</h3>
+            <div class="education-sector">
+              <h3 class="education-institute">
+                Master in Computer Engineering
+              </h3>
+              <h4 class="education-duration">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="education-sector-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="education-sector">
+              <h3 class="education-institute">
+                Master in Computer Engineering
+              </h3>
+              <h4 class="education-duration">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="education-sector-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="education-sector">
+              <h3 class="education-institute">
+                Master in Computer Engineering
+              </h3>
+              <h4 class="education-duration">
+                Harvard University / 2015 - 2017
+              </h4>
+              <p class="education-sector-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
           </div>
           <div class="resume-experience">
             <h3>My Experience</h3>
+            <div class="experience-sector">
+              <h3 class="experience-position">Sr. Font End Developer</h3>
+              <h4 class="experiance-duration">Apple Inc / 2020 - Current</h4>
+              <p class="experience-position-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="experience-sector">
+              <h3 class="experience-position">Jr. Font End Developer</h3>
+              <h4 class="experiance-duration">Dribbble Inc / 2018 - 2022</h4>
+              <p class="experience-position-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="experience-sector">
+              <h3 class="experience-position">HTML Developer</h3>
+              <h4 class="experiance-duration">Adobe Inc / 2017 - 2018</h4>
+              <p class="experience-position-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
           </div>
         </div>
       </section>
     </main>
-
     <footer></footer>
   </body>
 </html>
