added resume section full

--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
             </div>
           </div>
         </div>
+        <div class="download-btn-2">
+          <button class="btn-download">
+            <i class="fa-solid fa-download" class="btn-download"></i> Download
+            CV
+          </button>
+        </div>
       </section>
     </main>
     <footer></footer>
