--- a/index.html
+++ b/index.html
@@ -209,6 +209,32 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-connect">
+        <h3 class="connect-title">Let's Connect</h3>
+        <p class="connect-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <a href="#"><img src="./images/icons/facebook.png" alt="facebook" /></a>
+        <a href="#"><img src="./images/icons/twitter.png" alt="twitter" /></a>
+        <a href="#"><img src="./images/icons/insta.png" alt="instagram" /></a>
+      </div>
+      <div class="footer-massage">
+        <h3 class="massage-title">Let's Message me</h3>
+        <form>
+          <input type="text" placeholder="Your name" />
+          <input type="email" placeholder="Your email" />
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Message"
+          ></textarea>
+          <button class="submit-button" type="submit">Submit</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
